# CSED232

./: CMakeLists.txt  README.md
ASSN/ASSN1/: 20190084.docx  Makefile  Report Form.docx  assn1_dist.sh  chck.sh
ASSN/ASSN1/prob_1/: chck_1.sh  prob_1.cpp
ASSN/ASSN1/prob_2/: chck_2.sh  prob_2.cpp
ASSN/ASSN1/prob_3/: chck_3.sh  prob_3.cpp
ASSN/ASSN2/: 20190084.cpp  20190084.h  Comment.cpp  Comment.h  Contents.cpp  Contents.h  Friends.cpp  Friends.h  IO.cpp  IO.h  List.cpp  List.h  Menu.cpp  Menu.h  Post.cpp  Post.h  User.cpp  User.h  Utils.cpp  Utils.h  command.txt  dist.sh
ASSN/ASSN2/chck/: chck_2.py
ASSN/ASSN2/report/: assn2_report.docx  gen_table.py
ASSN/ASSN3/: 20190084.cpp  Block.cpp  Block.h  BlockList.cpp  BlockList.h  Board.cpp  Board.h  Game.cpp  Game.h  IO.cpp  IO.h  Makefile  Node.cpp  Node.h  Point.cpp  Point.h  Position.cpp  Position.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h  Tetromino.cpp  Tetromino.h  const.h  dist.sh
ASSN/ASSN3/report/: assn3.xlsx  assn3_report.docx  gen_table.py
ASSN/ASSN4/: SmartClass.h  cmp.sh  dist.sh  smartptr_test.cpp
ASSN/ASSN4/report/: 20190084.docx
ASSN/ASSN5/: 20190084.cpp  ASSN5.pro  ASSN5.pro.user.8d7fcf7  Makefile  Makefile.Debug  Makefile.Release  alram.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
ASSN/ASSN5/release/: ASSN5.exe.debug  moc_mainwindow.cpp  moc_predefs.h  qrc_audio.cpp
ASSN/ASSN5/report/: 20190084.docx  assn5.xlsx
ASSN/build-ASSN5-Desktop_Qt_MinGW_w64_64bit_MSYS2-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
ASSN/build-ASSN5-Desktop_Qt_MinGW_w64_64bit_MSYS2-Debug/debug/: moc_mainwindow.cpp  moc_predefs.h  qrc_alram.cpp
EXAM/final/: 05.cpp  05.out  06-plm.cpp  06.cpp  07.cpp  08-sol.cpp  08.cpp  09.cpp  10.cpp  11-A.cpp  11-B.cpp  11-C.cpp  20190084.tex
EXAM/midterm/: 02.cpp  03.cpp  05.cpp  06.cpp  07.cpp  08.cpp  10.cpp  20190084.tex
EXAM/midterm/04/: main.cpp  polar.h  polar_ops.h
backup/: Comment.cpp  Comment.h  Post.cpp  Post.h  User.cpp  User.h
playground/: 20200319.cpp
(+7 files in other folders)
